--- a/QnA.html
+++ b/QnA.html
@@ -99,7 +99,7 @@
                             {
                                 id: 7,
                                 question: '如果我對收到的巧克力不滿意，可以退貨嗎？',
-                                ans: '我們對所有訂單都提供滿意保證。如果巧克力在送達過程中有損壞或錯誤，請聯繫我們的客服進行退貨或換貨。',
+                                ans: '我們對所有訂單都提供滿意保證。如果送達過程中有損壞或錯誤，請聯繫我們的客服進行退貨或換貨。',
                             },
                             {
                                 id: 8,
