--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,7 @@
     <!-- 引用menu -->
     <link rel="stylesheet" href="./css/Menu.css">
     <script type="text/babel" src="./Menu.jsx"></script>
+    <script src="./js/Menu.js"></script>
     <!-- 引用swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/shop.css">
