--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -144,12 +144,15 @@
                     </div>
                 </div>
                 <div id="Checkout_area_btn_box">
-                    <div id="Checkout_area_box">
-                        <a href="./shop.html" id="Checkout_area_box_a1"><img
-                                src="./images/shopping_cart/Continue_shopping.svg" alt=""
-                                id="Checkout_area_box_a1_img"></a>
-                        <a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
-                                src="./images/shopping_cart/Checkout.svg" alt=""></a>
+                    <div id="Checkout_area_box2">
+                        <div id="cash_div_img1">
+                            <a href="./shop.html" id="Checkout_area_box_a1"><img
+                                    src="./images/shopping_cart/Continue_shopping.svg" alt=""
+                                    id="Checkout_area_box_a1_img"></a>
+                        </div>
+                        <div id="cash_div_img2"><a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
+                                    src="./images/shopping_cart/Checkout.svg" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
