--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -444,8 +444,8 @@
         </div>
         <div id="checkout_block">
             <div id="full_list_box_right_order_box4">
-                <div>
-                    <img src="./images/shopping_cart_two/hr.svg" alt="" id="full_list_box_right_order_box4_img">
+                <div id="full_list_box_right_order_box4_hr">
+                    <!-- <img src="./images/shopping_cart_two/hr.svg" alt="" id="full_list_box_right_order_box4_img"> -->
                 </div>
             </div>
             <div id="full_list_box_right_order_box5">
@@ -463,8 +463,8 @@
                 </div>
             </div>
             <div id="full_list_box_right_order_box5">
-                <div>
-                    <img src="./images/shopping_cart_two/hr.svg" alt="">
+                <div id="full_list_box_right_order_box5_hr">
+                    <!-- <img src="./images/shopping_cart_two/hr.svg" alt=""> -->
                 </div>
             </div>
             <div id="full_list_box_right_order_box6">
