--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
+    <script src="./js/Menu.js"></script>
 </head>
 
 <body>
@@ -19,6 +20,9 @@
     <div id="menu"></div>
     <script type="text/babel">
         function App() {
+                React.useEffect(() => {
+                    menuJS();
+                }, []); 
             return (
                 <Menu />
             )
