--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
                             <a href="" class="link_item">註冊帳號</a>
                             <a href="" class="link_item">忘記密碼</a>
                         </div>
-                        <button class="box_item button">登入會員</button>
+                        <button type="submit" class="box_item button">登入會員</button>
                         <div class="horizon">
                             <hr class="horizon_line" noshade="true">
                             <p class="horizon_text">或</p>
