新聞稿內容以及排版更新

--- a/news.html
+++ b/news.html
@@ -58,7 +58,16 @@
                         </div>
                     </div>
                     <article class="news_content">
-                        巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，還是偏好細膩的牛奶巧克力，甚至是充滿驚喜的果仁和香料.
+                        <p>——今秋最令人期待的甜蜜盛事——Mélange於本日隆重開幕！位於市中心的Mélange巧克力商店，為所有巧克力愛好者帶來了一場前所未有的味蕾盛宴。
+
+Mélange的開幕儀式吸引了眾多媒體和當地名人的光臨，現場充滿了節日的喜悅氣氛。
+<br>
+店內提供了來自世界各地的獨特巧克力，包括來自比利時的精緻黑巧克力、瑞士的細膩牛奶巧克力，以及融合了多種異國風味的創新巧克力。每一款產品都由專業巧克力大師精心製作，保證給顧客帶來極致的口感體驗。
+
+開幕當天，商店為前100名顧客準備了特別的開幕禮包，包括限量版巧克力、專屬折扣券以及精美的巧克力品嚐指南。此外，商店還安排了現場品嚐活動，讓顧客能夠在專家的指導下，體驗到巧克力製作的魅力和過程。
+<br>
+
+Mélange的開幕標誌著一個全新的巧克力體驗時代的開始。我們誠摯地邀請每位巧克力愛好者前來體驗這份甜蜜的驚喜，與我們一同見證巧克力的天堂在這裡盛大開啟！</p>
                     </article>
                 </section>
                 <aside class="box__list">
