--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -48,13 +48,24 @@
                             </div>
                             <div id="product_tips_btn1">
                                 <div id="product_tips_btn1_div1">
-                                    <button id="product_tips_btn1_div1_btn1">
+                                    <!-- <button id="product_tips_btn1_div1_btn1">
                                         <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
                                     </button>
                                     <p id="product_tips_btn1_div1_p1">1</p>
                                     <button id="product_tips_btn1_div1_btn2">
                                         <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
-                                    </button>
+                                    </button> -->
+                                    <div id="btn1">
+                                        <div id="plus1">
+                                            <p>-</p>
+                                        </div>
+                                        <div id="numberWhich1">
+                                            <p>1</p>
+                                        </div>
+                                        <div id="minus1">
+                                            <p>+</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div id="product_tips_cash1">
@@ -84,13 +95,24 @@
                             </div>
                             <div id="product_tips_btn1">
                                 <div id="product_tips_btn1_div1">
-                                    <button id="product_tips_btn1_div1_btn3">
+                                    <!-- <button id="product_tips_btn1_div1_btn3">
                                         <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
                                     </button>
                                     <p id="product_tips_btn1_div1_p2">1</p>
                                     <button id="product_tips_btn1_div1_btn4">
                                         <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
-                                    </button>
+                                    </button> -->
+                                    <div id="btn2">
+                                        <div id="plus2">
+                                            <p>-</p>
+                                        </div>
+                                        <div id="numberWhich2">
+                                            <p>1</p>
+                                        </div>
+                                        <div id="minus2">
+                                            <p>+</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div id="product_tips_cash1">
@@ -147,11 +169,11 @@
                     <div id="Checkout_area_box2">
                         <div id="cash_div_img1">
                             <a href="./shop.html" id="Checkout_area_box_a1"><img
-                                    src="./images/shopping_cart/Continue_shopping.svg" alt=""
+                                    src="./images/shopping_cart/Continue_shopping2.svg" alt=""
                                     id="Checkout_area_box_a1_img"></a>
                         </div>
                         <div id="cash_div_img2"><a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
-                                    src="./images/shopping_cart/Checkout.svg" alt=""></a>
+                                    src="./images/shopping_cart/Checkout2.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
